CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 03:15:36
+lastsearch = 2024-07-15 04:32:03
 
 [www.tiktok.com]
 match = -217.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -58.8%%
-title = The New International Encyclopædia
-url = https://books.google.com/books?id=O2YSKyGWiOoC&pg=PA178-IA1&lpg=PA178-IA1&dq=man+in+hoa+dep+16&source=bl&ots=AuuqVTP_Pn&sig=ACfU3U3hBKmhmxPnI_Y6FRdqyx514awDsw&hl=en&sa=X&ved=2ahUKEwiRqrS0rKeHAxXhGFkFHeZ9DXkQ6AF6BAgbEAM
+match = -194.1%%
+title = Index-catalogue of the Library of the Surgeon General's ...
+url = https://books.google.com/books?id=yT4iAQAAMAAJ&pg=RA1-PA553&lpg=RA1-PA553&dq=man+in+hoa+dep+16&source=bl&ots=XJbPqKZB5c&sig=ACfU3U2r5UQh_iG8g1dzjPcML3poytH8vg&hl=en&sa=X&ved=2ahUKEwj8qMa_vaeHAxWgD1kFHQWMC5QQ6AF6BAgTEAM
 
 [tax.vermont.gov]
 match = -29.4%%
