--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-15 04:17:45
+lastsearch = 2024-07-15 04:32:16
 
 [www.galottery.com]
 match = -7.7%%
@@ -12,8 +12,8 @@ title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
-match = -53.8%%
-title = 𝐔𝐬𝐦𝐚𝐧 𝐆𝐚𝐧𝐢 (@theusman.gani)
+match = -138.5%%
+title = 𝐔𝐬𝐦𝐚𝐧 𝐆𝐚𝐧𝐢 (@theusman.gani) - Instagram
 url = https://www.instagram.com/theusman.gani/
 
 [www.homedepot.com]
