--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-15 03:14:39
+lastsearch = 2024-07-15 04:32:38
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerPLlpe&sig=ACfU3U27hVj07KELQ3gpZU0vb2OJ3jQTfg&hl=en&sa=X&ved=2ahUKEwif2o6ZrKeHAxXaFlkFHW5dCCoQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerQFsnd&sig=ACfU3U0SuFup8_xARAUh9B6iGYutQ_c4iQ&hl=en&sa=X&ved=2ahUKEwjjxZfQvaeHAxWUFlkFHZ93DIUQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
