--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-15 03:13:55
+lastsearch = 2024-07-15 04:26:23
 
 [www.thanhthuyhanh.com]
 match = 78.6%%
@@ -27,9 +27,9 @@ title = Ruột Gối Everon Các Loại, Giá Bán Rẻ Nhất Tại Hà Nội
 url = https://everonhanquoc.vn/1024/ruot-goi-everon
 
 [changagoidemsonghong.online]
-match = 42.9%%
-title = Ruột gối Sông Hồng
-url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
+match = -142.9%%
+title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
+url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 
 [demxanh.com]
 match = -150.0%%
@@ -62,9 +62,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
-match = -100.0%%
-title = Bảng giá ruột gối Advansa Micro - Everon
-url = https://everonvn.com.vn/everon/140/ruot-goi-advansa-micro
+match = -164.3%%
+title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
