--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-14 23:53:26
+lastsearch = 2024-07-15 04:46:13
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -17.6%%
-title = Bộ chăn ga gối Everon ESB-22053 phong cách Ankara...
-url = https://everonhanquoc.com.vn/bo-chan-ga-goi-everon-esb-22053-pd.html
+match = -26.5%%
+title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
