--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-15 03:34:32
+lastsearch = 2024-07-15 04:50:09
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -135.0%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.akc.org]
 match = -45.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -150.0%%
-title = Why my teacher told us that 'eighteen' is a bad word in ...
-url = https://www.reddit.com/r/Korean/comments/12esgv/why_my_teacher_told_us_that_eighteen_is_a_bad/
+match = -85.0%%
+title = Legal adult age in Korea is 19, not 18 : r/kpoprants
+url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
 
 [timesofindia.indiatimes.com]
 match = -115.0%%
