--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-15 04:12:08
+lastsearch = 2024-07-15 05:20:26
 
 [everon.online]
 match = -12.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -64.0%%
-title = Mua Bán Chung Cư Hà Nội | 💥 Bán căn hộ 4pn tại chung ...
-url = https://m.facebook.com/groups/1734195913728206/posts/1853739068440556/
+match = -84.0%%
+title = Đất trang trại, đồi rừng, Nhà vườn | 🌳🆘Bác nào thích...
+url = https://m.facebook.com/groups/384335626779282/posts/954317313114441/
 
 [dantri.com.vn]
 match = -60.0%%
