--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-15 02:26:01
+lastsearch = 2024-07-15 05:14:56
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
@@ -117,9 +117,9 @@ title = Cotton S (CTS) - Koala
 url = https://koala.vn/chan-ga-goi/koala-cts
 
 [cuahangchangagoidem.com]
-match = -40.7%%
-title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
+match = -25.9%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [spacet.vn]
 match = -33.3%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -11.1%%
-title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
+match = -29.6%%
+title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
+url = https://elmichsleep.vn/chan-ga-goi
 
 [khodemgiagoc.com]
 match = -37.0%%
