--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-15 02:14:16
+lastsearch = 2024-07-15 05:12:42
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,9 +22,9 @@ title = Ga phủ giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loạ
 url = https://shopee.vn/list/ga phủ giường
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
 match = 37.0%%
@@ -42,9 +42,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [songhong.info]
-match = 10.7%%
-title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
-url = https://songhong.info/chan-ga-goi-uc019
+match = 14.3%%
+title = Chăn ga gối cao cấp Urban mã UC23-039
+url = https://songhong.info/chan-ga-goi-uc039
 
 [cuahangchangagoidem.com]
 match = 3.6%%
