--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-14 22:53:25
+lastsearch = 2024-07-15 05:12:13
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = 0.0%%
+title = Sylvia Gani
+url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
 match = -323.1%%
@@ -470,4 +470,9 @@ url = https://books.google.com/books?id=oZYoAAAAQBAJ&pg=PA419&lpg=PA419&dq=ga+ni
 match = -161.5%%
 title = VA Atlanta Health Care | Veterans Affairs
 url = https://www.va.gov/atlanta-health-care/
+
+[www.georgiarestareas.com]
+match = -307.7%%
+title = Georgia Rest Areas: Roadside GA Rest Stops | Maps | Facility
+url = https://www.georgiarestareas.com/
 
