--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-15 04:14:36
+lastsearch = 2024-07-15 05:18:15
 
 [www.youtube.com]
-match = -330.0%%
-title = Hands Off My Yandere! - 14 Days With You DAY 2 Demo
-url = https://www.youtube.com/watch?v=52d9dTSCRaI
+match = -500.0%%
+title = Ren plays Chalk Outlines (his collab with Chichilla). The Big ...
+url = https://www.youtube.com/watch?v=6ROuMEXhOfA
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -70.0%%
-title = Ren 14 Days with You
-url = https://www.tiktok.com/discover/ren-14-days-with-you
+match = -130.0%%
+title = Ren (@renmakesmusic) Official
+url = https://www.tiktok.com/@renmakesmusic?lang=en
 
 [nordicanglers.com]
 match = -120.0%%
@@ -132,8 +132,8 @@ title =
 url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gjate-ne-bote
 
 [www.reddit.com]
-match = -340.0%%
-title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
+match = -100.0%%
+title = Ren's dying in V14 (maybe)
 url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
 
 [www.maciociaonline.com]
