--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-15 03:30:31
+lastsearch = 2024-07-15 05:17:40
 
 [munghoangphat.com]
-match = -24.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
-match = -36.0%%
-title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
-url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [shopee.vn]
 match = -28.0%%
@@ -22,9 +22,9 @@ title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
