--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-15 04:44:22
+lastsearch = 2024-07-15 05:18:26
 
 [gobearcats.com]
 match = -142.1%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
