--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-15 05:17:18
+lastsearch = 2024-07-15 05:31:47
 
 [www.facebook.com]
 match = -141.2%%
@@ -149,7 +149,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 [books.google.com]
 match = -7.7%%
 title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SpilWCqC&sig=ACfU3U13UjI-odvoDfiqjpTDk-moNO8y0w&hl=en&sa=X&ved=2ahUKEwi36vS4yp6HAxWkFVkFHawwDw0Q6AF6BAgdEAM
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SplmWwkJ&sig=ACfU3U0s3CxorJIeDeXsk1wLAEgMnxadpw&hl=en&sa=X&ved=2ahUKEwjThN7syqeHAxUxjYkEHSsPCewQ6AF6BAglEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
