--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-15 05:14:42
+lastsearch = 2024-07-15 05:35:03
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -27,9 +27,9 @@ title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
 url = https://www.facebook.com/groups/anchoidailoan/
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 12.5%%
+title = Lịch sử Đài Loan
+url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -117,9 +117,9 @@ title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
 url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
 
 [www.klook.com]
-match = -12.0%%
-title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
-url = https://www.klook.com/vi/blog/dac-san-dai-loan/
+match = -56.0%%
+title = 35 Địa Điểm Du Lịch Đài Loan Nổi Tiếng Cho Bạn Khám Phá
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
