--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-15 02:16:51
+lastsearch = 2024-07-15 05:36:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -123.8%%
-title = Trần Minh Khải VS Nguyễn Khánh Hoàng - TỨ KẾT | GIẢI ...
-url = https://www.youtube.com/watch?v=BwhSgkKke2A
+match = -128.6%%
+title = Lâm Bảo Minh VS Hoàng Thái Duy - BÁN KẾT | GIẢI POOL 9 ...
+url = https://www.youtube.com/watch?v=t4CmzxmKkDg
 
 [chieutruc.info]
 match = -71.4%%
