--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-15 04:50:09
+lastsearch = 2024-07-15 05:32:32
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -135.0%%
-title = nem parece que é gay 😂 #minerva #cblol #ilhadaslendas ...
-url = https://www.tiktok.com/@gustavominerva/video/7388499877279370542
+match = -30.0%%
+title = What Hair Dye to Use for King Von
+url = https://www.tiktok.com/discover/what-hair-dye-to-use-for-king-von
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -135.0%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -90.0%%
+title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
 
 [www.akc.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -135.0%%
-title = Bitcoin Miner TeraWulf Clears Debt, Plans Operational ...
-url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-operational-upsurge.htm
+match = -165.0%%
+title = Bitcoin Mining Profitability Bounced Back In June: Jefferies ...
+url = https://cryptonews.com/news/bitcoin-miner-profitability-june.htm
 
 [www.thespike.gg]
 match = -135.0%%
