--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-15 02:14:48
+lastsearch = 2024-07-15 06:18:09
 
 [demxanh.com]
 match = 25.9%%
@@ -67,17 +67,27 @@ title = Chiếu mây điều hòa 3D kích thước 140x190cm
 url = https://chieutrelanlan.com/chieu-dieu-hoa-kich-thuoc-140x190cm-51.html
 
 [www.lazada.vn]
-match = -18.5%%
-title = Chiếu Mây Điều Hòa Chiếu Điều Hoà Thông Hơi Cao Cấp ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-dieu-hoa-thong-hoi-cao-cap-du-kich-thuoc-mat-lanh-va-em-ai-i2221925576.html
+match = -40.7%%
+title = Size 1.6x2m - Chiếu điều hòa mát lạnh tencel mủ cao su ...
+url = https://www.lazada.vn/products/size-16x2m-chieu-dieu-hoa-mat-lanh-tencel-mu-cao-su-non-loai-i-khong-co-vo-goi-ben-ben-chieu-dieu-hoa-cao-su-chieu-cao-su-non-i854758112.html
 
 [h5.lazada.vn]
 match = -40.7%%
-title = Chiếu điều hòa mát lạnh ĐỦ SIZE loại dày, chiếu mây có ...
-url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chieu-may-co-the-gap-gon-giup-ngu-ngon-hon-i557242724.html
+title = Size 1.6x2m - Chiếu điều hòa mát lạnh tencel mủ cao su ...
+url = https://h5.lazada.vn/products/size-16x2m-chieu-dieu-hoa-mat-lanh-tencel-mu-cao-su-non-loai-i-khong-co-vo-goi-ben-ben-chieu-dieu-hoa-cao-su-chieu-cao-su-non-i854758112-s2407336069.html
 
 [thegioinem.com]
 match = 33.3%%
 title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+
+[dienlanhdonganh.com]
+match = -74.1%%
+title = Điều hòa Panasonic 1 chiều 12000Btu CU/CS-N12WKH-8 (ga ...
+url = https://dienlanhdonganh.com/dieu-hoa-panasonic-1-chieu-12000btu-cu-cs-n12wkh-8-ga-32
+
+[ru9.vn]
+match = -18.5%%
+title = Chiếu điều hoà cao su non có mát không? Review chi tiết
+url = https://ru9.vn/blogs/magazine/chieu-dieu-hoa-cao-su-non-co-tot-khong
 
