--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-15 05:52:24
+lastsearch = 2024-07-15 06:21:10
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerQKqm9&sig=ACfU3U0YnI8CAQ8CJypGTmvTVvuH04jhSg&hl=en&sa=X&ved=2ahUKEwjGirG6z6eHAxU4EVkFHbBbCeIQ6AF6BAgVEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fshS1js07&sig=ACfU3U0YrURHyQ2e5spoF36XJzcIJQc7LA&hl=en&sa=X&ved=2ahUKEwij0rHx1aeHAxVIFzQIHR5nAJUQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
