--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-15 05:32:32
+lastsearch = 2024-07-15 06:13:35
 
 [en.wikipedia.org]
-match = -12.5%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -132,8 +132,8 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -85.0%%
-title = Legal adult age in Korea is 19, not 18 : r/kpoprants
+match = -15.0%%
+title = Legal adult age in Korea is 19, not 18
 url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
 
 [timesofindia.indiatimes.com]
