--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-15 04:44:42
+lastsearch = 2024-07-15 06:13:24
 
 [tuananh.vn]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
 url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
-match = 25.0%%
-title = Đệm bông ép Korea Cotton
-url = https://demkhangduy.com/dem-bong-ep-korea-cotton
+match = 28.0%%
+title = Đệm bông ép Korea Gấm cách nhiệt
+url = https://demkhangduy.com/dem-bong-ep-korea-gam-cach-nhiet
 
 [thegioidemviet.vn]
 match = -36.0%%
@@ -42,9 +42,9 @@ title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 
 [dem24h.vn]
-match = 12.0%%
-title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
-url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
+match = -8.0%%
+title = Đệm Bông Ép Bề Mặt Masage Korea Plus
+url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
 
 [suongtuyet.com]
 match = 4.0%%
