--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-15 05:48:21
+lastsearch = 2024-07-15 06:31:26
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -260.0%%
-title = WoT || I Finally Completed HT-14 || And It Was Just Way Too ...
-url = https://www.youtube.com/watch?v=c7UL4QxJSt0
+match = -233.3%%
+title = Tin Buổi Sáng - Ngày 14/07/2024 - HTV Tin Tức Mới Nhất ...
+url = https://www.youtube.com/watch?v=z-ABxLf4agM
 
 [dauthau.asia]
 match = -240.0%%
