--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-15 05:15:29
+lastsearch = 2024-07-15 06:31:48
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -133.3%%
-title = Sân nhà cung các hoạt động khác diễn ra tại
-url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
+match = -13.3%%
+title = Grand Loyal Poker Club
+url = https://www.facebook.com/GrandLoyal/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -265,4 +265,9 @@ url = https://xoilaczvv.tv/
 match = -113.3%%
 title = Korea Visa Application Center in Ha Noi
 url = https://www.visaforkorea-vt.com/
+
+[www.lainielovedalby.com]
+match = -293.3%%
+title = [VIDEO] The Dial of Destiny: Astrology of July & August as well ...
+url = https://www.lainielovedalby.com/reverent-reflections-blog/2023/7/17/video-the-dial-of-destiny-astrology-of-july-amp-august-as-well-as-a-big-announcement
 
