--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-15 04:31:21
+lastsearch = 2024-07-15 06:28:23
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -37,8 +37,8 @@ title = Nệm Cao Su Bông Kim Cương
 url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+match = -14.3%%
+title = Nệm Everhome - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
