--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-15 05:16:45
+lastsearch = 2024-07-15 06:28:12
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -12,9 +12,9 @@ title = Túi nệm - Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
-match = -58.3%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+match = -10.5%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [www.seatrade-cruise.com]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = SG Arrival Card and ePass - Singapore Forum
 url = https://www.tripadvisor.com/ShowTopic-g294262-i1747-k14626749-SG_Arrival_Card_and_ePass-Singapore.html
 
 [www.youtube.com]
-match = -87.5%%
-title = Family Member onboard TUI Boeing 787-9 (Dreamliner ...
-url = https://www.youtube.com/watch?v=MeOQ96Y6-jg
+match = -133.3%%
+title = | Trip Report | On the Dreamliner! |TUI Airways Boeing 787-9 ...
+url = https://www.youtube.com/watch?v=g2-tbxb9iiQ
 
 [www.instagram.com]
 match = -91.7%%
