CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-15 05:33:44
+lastsearch = 2024-07-15 06:56:40
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTZOrGZC&sig=ACfU3U2SUlv_mMABzuEoBrM3cMLXopCTow&hl=en&sa=X&ved=2ahUKEwjjmq2ky6eHAxWgkIkEHQ9SDf0Q6AF6BAgVEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUQFmGXy&sig=ACfU3U3V536cyF14mCtS7XD67jSDE_DY6g&hl=en&sa=X&ved=2ahUKEwi2rYLp3aeHAxVGhIkEHXObCioQ6AF6BAgZEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -300,4 +300,9 @@ url = https://www.asuult.net/index_gadnii_material.php?gargah_material=https://x
 match = -69.2%%
 title = Cuộn len acrylic Sultan nhập khẩu từ Nako, đan móc áo, váy
 url = https://chouihandmade.com/products/cuon-len-acrylic-sultan-nhap-khau-tu-nako-dan-moc-ao-vay
+
+[binhdinh.gov.vn]
+match = 0.0%%
+title = KỶ NIỆM 420 NĂM DANH XƯNG QUY NHƠN (1602
+url = https://binhdinh.gov.vn/tin-tuc/tin-tu-thi-xa-huyen-thanh-pho/ky-niem-420-nam-danh-xung-quy-nhon-1602-2022-va-124-nam-do-thi-tinh-ly-binh-dinh-20-10-1898-20-10-2022-.html
 
