--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-15 04:32:27
+lastsearch = 2024-07-15 06:46:37
 
 [www.youtube.com]
 match = -147.4%%
@@ -237,9 +237,9 @@ title = chè bưởi thạch găng 15k thanh mát cho ngày hè oi bức
 url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1456426335021098/
 
 [caycanhmoc.vn]
-match = -110.5%%
-title = Đặc điểm,ý nghĩa và cách trồng cây lát hoa - 14/07/2024
-url = https://caycanhmoc.vn/dac-diemy-nghia-va-cach-trong-cay-lat-hoa/
+match = -100.0%%
+title = Công dụng và ý nghĩa của cây phong lộc hoa - 14/07/2024
+url = https://caycanhmoc.vn/cong-dung-va-y-nghia-cua-cay-phong-loc-hoa/
 
 [hanoimoi.vn]
 match = -136.8%%
