--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-14 20:16:23
+lastsearch = 2024-07-15 06:53:56
 
 [burningman.org]
 match = 0.0%%
@@ -725,4 +725,9 @@ url = https://www.g-star.com/
 match = 0.0%%
 title = 
 url = https://azburners.org/the-11-principles/
+
+[www.costco.com]
+match = -53.3%%
+title = Welcome to Costco Wholesale
+url = https://www.costco.com/
 
