--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-15 00:21:24
+lastsearch = 2024-07-15 06:48:51
 
 [www.lazada.vn]
 match = -88.9%%
@@ -42,9 +42,9 @@ title = Quán nem nướng núp hẻm siêu ngon ở Gò Vấp, tuổi đời 12
 url = https://www.tiktok.com/@reviewcungphuocnhe/video/7249391511442296069
 
 [www.youtube.com]
-match = -150.0%%
-title = Nem Nướng Theo Cách Này Dù Không Dùng Mỡ Mà Vẫn Béo ...
-url = https://www.youtube.com/watch?v=aVTZUMebQ4M
+match = -155.6%%
+title = Tipps and Tricks - How to make CHA GIO - Authentic ...
+url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.kymdan.com]
 match = -5.6%%
