--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-15 04:11:37
+lastsearch = 2024-07-15 06:56:07
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -87.5%%
-title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENO0Z22Vy&sig=ACfU3U1C826-_uPRLpIAi1Gx35QiWLdHqw&hl=en&sa=X&ved=2ahUKEwi2vcCAoqeHAxWNMlkFHd9LCXwQ6AF6BAgZEAM
+match = -162.5%%
+title = Annuaire général de l'Indochine. Partie commerciale
+url = https://books.google.com/books?id=RbcVAQAAIAAJ&pg=PA828&lpg=PA828&dq=chieu+lac+soc+18&source=bl&ots=6MkLyz73TP&sig=ACfU3U2ISS9uCCnz30W5Gctgr0j44iVVyA&hl=en&sa=X&ved=2ahUKEwjC0JXZ3aeHAxUvhIkEHYyNA6AQ6AF6BAgXEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
