--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-15 04:13:15
+lastsearch = 2024-07-15 06:49:35
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
-match = 35.7%%
-title = Chiếu nhựa loại đẹp Hà Nội, chiếu ...
-url = https://shopee.vn/Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-dã-ngoại-i.26647481.24652949365
+match = 32.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [tiki.vn]
 match = -21.4%%
