--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-15 06:13:44
+lastsearch = 2024-07-15 06:44:39
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Willamette Meteorite
 url = https://en.wikipedia.org/wiki/Willamette_Meteorite
 
 [www.facebook.com]
-match = 0.0%%
-title = Sylvia Gani
-url = https://www.facebook.com/sylviagani/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -323.1%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
