CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 06:19:48
+lastsearch = 2024-07-15 08:04:36
 
 [www.youtube.com]
 match = -48.0%%
@@ -48,8 +48,8 @@ url = https://books.google.com/books?id=OOxE8VSuu4gC&pg=PA38&lpg=PA38&dq=chieu+g
 
 [www.skyscanner.com.vn]
 match = -48.0%%
-title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
+title = Vé máy bay giá rẻ từ Tōkyō đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tyoa/tw/tokyo-to-đai-loan.html
 
 [tienphong.vn]
 match = -36.0%%
@@ -380,4 +380,14 @@ url = https://www.vn.kayak.com/flight-routes/ai-Loan-TW0/TP-Ho-Chi-Minh-Ho-Chi-M
 match = -60.0%%
 title = Bí thư T.Ư Đoàn gặp mặt đoàn đại biểu tham dự chương ...
 url = https://doanthanhnien.vn/tin-tuc/doi-tntp-ho-chi-minh/bi-thu-t-u-doan-gap-mat-doan-dai-bieu-tham-du-chuong-trinh-giao-luu-thieu-nhi-viet---trung-nam-2024
+
+[www.china-airlines.com]
+match = -12.0%%
+title = Tìm kiếm chuyến bay | China Airlines
+url = https://www.china-airlines.com/sea/vi/booking/book-flights/flight-search?lang=vi-VN&deptstn=HAN&arrstn=TPE
+
+[tcns.ntt.edu.vn]
+match = 12.0%%
+title = bóng đá 90 Đăng ký và nhận 188K
+url = http://tcns.ntt.edu.vn/Video/5571716
 
