--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-15 06:12:21
+lastsearch = 2024-07-15 07:58:40
 
 [shopee.vn]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-ki
 [books.google.com]
 match = -231.2%%
 title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
-url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83szfmS_Yw&sig=ACfU3U3rKYsBzcwtqT7H5n2V48sCKULapQ&hl=en&sa=X&ved=2ahUKEwjx2KGZhqeHAxWxCTQIHdhnD1wQ6AF6BAglEAM
+url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83sA6fQTTn&sig=ACfU3U2Wmv2wlYBAV60Q_lqwO7XwchDhdg&hl=en&sa=X&ved=2ahUKEwi9s-3W66eHAxVeFFkFHRdrAUsQ6AF6BAgdEAM
 
 [baovinhlong.vn]
 match = -137.5%%
