--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-15 06:49:58
+lastsearch = 2024-07-15 08:00:04
 
 [www.tiktok.com]
-match = -231.2%%
-title = Reverse Corrector #beautytok #makeuphacks #colorcorection ...
-url = https://www.tiktok.com/@hudabeauty/video/7378924653521177898
+match = -75.0%%
+title = As Warm As Fire Final Episode Ending
+url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
 
 [digitalmaine.com]
 match = -75.0%%
