--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-15 02:01:50
+lastsearch = 2024-07-15 09:14:27
 
 [shopee.vn]
-match = 86.4%%
-title = Chiếu điều hoà kèm gối
-url = https://shopee.vn/Chiếu-điều-hoà-kèm-gối-i.66169225.18826635568
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [meoi.com.vn]
 match = 24.0%%
