--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 08:04:36
+lastsearch = 2024-07-15 09:16:24
 
 [www.youtube.com]
 match = -48.0%%
@@ -42,14 +42,14 @@ title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền
 url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
 
 [books.google.com]
-match = 12.0%%
-title = Đại Nam chính biên liệt truyện
-url = https://books.google.com/books?id=OOxE8VSuu4gC&pg=PA38&lpg=PA38&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=Mbs7PN7NFq&sig=ACfU3U3KpwTrZbcpwkvEfTgdYnkmW2QLRg&hl=en&sa=X&ved=2ahUKEwifjf_4rKeHAxWbFVkFHetlAgYQ6AF6BAgUEAM
+match = -96.0%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=KcLrGZCT7a&sig=ACfU3U0bnVgu7cVs3nMC715SoGIw38SqIg&hl=en&sa=X&ved=2ahUKEwjn5d-G_aeHAxUghIkEHaPRDrMQ6AF6BAgWEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
-title = Vé máy bay giá rẻ từ Tōkyō đến Đài Loan - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tyoa/tw/tokyo-to-đai-loan.html
+title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
 
 [tienphong.vn]
 match = -36.0%%
