--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-15 06:29:36
+lastsearch = 2024-07-15 09:08:14
 
 [demxanh.com]
 match = -135.3%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -158.8%%
-title = chiếu tre 80 cm đến 120cm hạt vàng không viền (hình thật ...
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-80-cm-đến-120cm-hạt-vàng-không-viền-(hình-thật-shop-tự-chụp-phía-sau)-i.231274383.3718770500
+match = -135.3%%
+title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
+url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [vongxepsaigon.vn]
 match = -188.2%%
