--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-15 06:44:25
+lastsearch = 2024-07-15 09:14:38
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -77,9 +77,9 @@ title = George A Calin, MD, Ph.D.
 url = https://faculty.mdanderson.org/profiles/george_calin.html
 
 [ischool.uw.edu]
-match = 8.3%%
-title = Anind K. Dey
-url = https://ischool.uw.edu/people/faculty/profile/anind
+match = -246.2%%
+title = Anind K. Dey - UW iSchool - University of Washington
+url = http://ischool.uw.edu/people/faculty/profile/anind
 
 [www.uswomensopen.com]
 match = -192.3%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -292.3%%
-title = Chong Ahn - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/ahnch
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
