CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-15 08:05:51
+lastsearch = 2024-07-15 09:50:13
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1OccdWu&sig=ACfU3U2j7YsgXZem5JP0O-471YNrMShVfQ&hl=en&sa=X&ved=2ahUKEwio0cmk7aeHAxVeGFkFHblVAV0Q6AF6BAggEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqS97UYJ&sig=ACfU3U3CHUxmtxRYvHie44H6SKuiWBqwnQ&hl=en&sa=X&ved=2ahUKEwjp0qHOhKiHAxVUCjQIHYRfAyAQ6AF6BAgfEAM
 
 [www.travelweekly.com]
 match = -87.0%%
