--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-15 04:30:48
+lastsearch = 2024-07-15 09:48:36
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -47,9 +47,9 @@ title = Biblia sacra polyglotta, complectentia textus originales, ...
 url = https://books.google.com/books?id=vA9D5rB00vQC&pg=PA743&lpg=PA743&dq=man+re+xanh+16&source=bl&ots=qA4ByBL8sF&sig=ACfU3U3LpwH7c483-oghi4YWrX4GBsnfxg&hl=en&sa=X&ved=2ahUKEwir-vaG-6GHAxVqOTQIHVu_C04Q6AF6BAgYEAM
 
 [mobilecity.vn]
-match = -185.7%%
-title = Điện thoại Xiaomi Redmi K70 (Snapdragon 8 Gen 2)
-url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k70-cau-hinh-manh.html
+match = -207.1%%
+title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
+url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
 match = -242.9%%
