--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-15 09:09:00
+lastsearch = 2024-07-15 09:46:50
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -136.8%%
+title = Shop hoa tươi Hoa18: Đặt hoa online, điện hoa toàn quốc
+url = https://hoa18.com/
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Hồi Sinh Ngọc Rồng
 url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
-match = -147.4%%
-title = Vàng 24K đảo chiều tăng nhẹ, bán ra 76,2 triệu đồng/lượng
-url = https://vietnambiz.vn/so-sanh-gia-vang-107-vang-24k-dao-chieu-tang-nhe-ban-ra-762-trieu-dongluong-2024710121935774.htm
+match = -136.8%%
+title = Phiên đầu tuần 15/7, giá heo hơi miền Nam trái chiều ...
+url = https://vietnambiz.vn/phien-dau-tuan-157-gia-heo-hoi-mien-nam-trai-chieu-1000-dongkg-2024714205154498.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
@@ -97,9 +97,9 @@ title = VNeID là tài khoản duy nhất thực hiện thủ tục hành chính
 url = https://www.htv.com.vn/vneid-la-tai-khoan-duy-nhat-thuc-hien-thu-tuc-hanh-chinh-dich-vu-cong-tu-ngay-17
 
 [www.baodienbienphu.com.vn]
-match = -47.4%%
-title = Giá vàng mất mốc 67 triệu đồng/lượng
-url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
+match = -100.0%%
+title = Giá vàng giảm mạnh, mất mốc 71 triệu đồng/lượng
+url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/209883/gia-vang-giam-manh-mat-moc-71-trieu-dongluong?page=115
 
 [nongnghiep.vn]
 match = 21.1%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -157.9%%
-title = Vụ ám sát ông Trump sẽ làm cuộc đua vào Nhà Trắng kịch ...
-url = https://trithucvn.co/the-gioi/vu-am-sat-ong-trump-se-lam-cuoc-dua-vao-nha-trang-kich-tinh-va-bao-luc-hon.html
+match = -163.2%%
+title = 20 thành phố ở Trung Quốc triển khai dịch vụ “taxi không ...
+url = https://trithucvn.co/trung-quoc/20-thanh-pho-o-trung-quoc-trien-khai-dich-vu-taxi-khong-nguoi-lai.html
 
 [bptv.vn]
 match = -57.9%%
