--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-15 09:11:54
+lastsearch = 2024-07-15 09:55:07
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = -14.8%%
+title = Chiếu điều hòa (không kèm vỏ gối) sợi mây 2 lớp chất ...
+url = https://shopee.vn/Chiếu-điều-hòa-(không-kèm-vỏ-gối)-sợi-mây-2-lớp-chất-lượng-cao-Minh-Nhật-–-Sang-trọng-mềm-mại-thoáng-mát-i.319365577.9030851250
 
 [demxanh.com]
 match = 14.8%%
