--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-15 08:04:14
+lastsearch = 2024-07-15 09:53:00
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -160.0%%
-title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
-url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
+match = -253.3%%
+title = D2 (1976--1981) ĐHCSND | Đầu tháng 3 âm lịch , kể ra thì ...
+url = https://www.facebook.com/groups/925615600806693/posts/đầu-tháng-3-âm-lịch-kể-ra-thì-vẫn-còn-tiết-xuân-sau-hội-khoá-46-năm-một-năm-rưỡi/7753730264661825/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -213.3%%
-title = Trống cajon AB-D2 có tay vặn chỉnh âm - Kèm bao đựng ...
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-vặn-chỉnh-âm-Kèm-bao-đựng-và-lót-mông-Bảo-hành-1-năm-i.37429989.1681876016
+match = -146.7%%
+title = bút kèn D212 bút đầu quay dễ thương viết gel
+url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
