--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-15 09:16:01
+lastsearch = 2024-07-15 10:22:45
 
 [www.lazada.vn]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -270,4 +270,9 @@ url = https://changakhachsan.net/san-pham/vo-goi-khach-san/
 match = -127.8%%
 title = [Users] A mobile monitoring application for oVirt
 url = https://lists.ovirt.org/archives/list/users@ovirt.org/thread/VPNFIG4CZKUFJMERC2KJGAUMCSFOLAYO/
+
+[www.facebook.com]
+match = 0.0%%
+title = Người Việt California
+url = https://www.facebook.com/groups/nvca16/
 
