--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-15 06:46:50
+lastsearch = 2024-07-15 10:18:12
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -205.9%%
+title = If an HOA in state does not enforce its rules for a certain ...
+url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -141.2%%
-title = anyone know how to find who the HOA president is? ...
-url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [spectrumam.com]
 match = -76.5%%
