--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-15 09:48:58
+lastsearch = 2024-07-15 10:21:48
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -22,9 +22,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
-match = -50.0%%
-title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
-url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
+match = 5.0%%
+title = Đệm bông ép Sóng Everon
+url = https://everonchinhhang.vn/products/dem-bong-ep-song-everon
 
 [suongtuyet.com]
 match = 15.0%%
