--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-15 06:13:35
+lastsearch = 2024-07-15 10:20:24
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -90.0%%
-title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
-url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
+match = -135.0%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.akc.org]
 match = -45.0%%
@@ -132,8 +132,8 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -15.0%%
-title = Legal adult age in Korea is 19, not 18
+match = -85.0%%
+title = Legal adult age in Korea is 19, not 18 : r/kpoprants
 url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
 
 [timesofindia.indiatimes.com]
