CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-15 10:23:45
+lastsearch = 2024-07-15 10:51:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HwqgQ83Q&sig=ACfU3U2C-0hdHe79Zs6uBF6xB9xiLzpfIw&hl=en&sa=X&ved=2ahUKEwjEuuuNjKiHAxXfFFkFHV2ODnQQ6AF6BAgXEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HwqgS51T&sig=ACfU3U3MK7WyxCuqQbR_MNhtyOAmUV-jgg&hl=en&sa=X&ved=2ahUKEwii0vmvkqiHAxWmpIkEHWqOAVYQ6AF6BAgYEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
