--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-15 08:00:13
+lastsearch = 2024-07-15 10:49:02
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -115,4 +115,9 @@ url = https://dovihome.vn/giuong-ma-dv4-giuong-ngu-decor-co-tua-dau-phong-cach-t
 match = 28.6%%
 title = Thảm Bohemian xanh đỏ
 url = https://covacu.com/tham-trai-giuong-bohemian-xanh-do
+
+[www.facebook.com]
+match = -300.0%%
+title = FITIN
+url = https://www.facebook.com/fitin.vn/?locale=km_KH
 
