--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 09:53:53
+lastsearch = 2024-07-15 10:49:44
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Index-catalogue of the Library of the Surgeon General's ...
-url = https://books.google.com/books?id=yT4iAQAAMAAJ&pg=RA1-PA553&lpg=RA1-PA553&dq=man+in+hoa+dep+16&source=bl&ots=XJbPqKZB5c&sig=ACfU3U2r5UQh_iG8g1dzjPcML3poytH8vg&hl=en&sa=X&ved=2ahUKEwj8qMa_vaeHAxWgD1kFHQWMC5QQ6AF6BAgTEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmOvx_5I&sig=ACfU3U17LFleCxNmsi_o3zUBDzjZSnCMDQ&hl=en&sa=X&ved=2ahUKEwiZy5D1kaiHAxVAv4kEHfx5DEkQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
