--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-15 10:37:07
+lastsearch = 2024-07-15 10:45:58
 
 [www.gov.uk]
 match = -200.0%%
@@ -865,4 +865,9 @@ url = https://www.endocrine.org/
 match = -253.3%%
 title = Autism Spectrum Disorder - National Institute of Mental Health
 url = https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd
+
+[www.costco.com]
+match = -53.3%%
+title = Welcome to Costco Wholesale
+url = https://www.costco.com/
 
