--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-15 09:13:14
+lastsearch = 2024-07-15 10:49:33
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Ruột nệm Korea 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
 match = -56.0%%
@@ -22,9 +22,9 @@ title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -92.0%%
-title = Why North Korea’s dumping garbage on South Korea | About ...
-url = https://www.youtube.com/watch?v=SU3JMXEUtgg
+match = 4.2%%
+title = Shopping in Seoul, Korea
+url = https://www.youtube.com/playlist?list=PL57y3Ds0TP-TdVWc672z5QnhQ1RaOdZ4P
 
 [www.bbc.co.uk]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://www.britannica.com/place/Seoul
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Names_of_Korea
+url = https://en.wikipedia.org/wiki/Joseon
 
 [rusticpathways.com]
 match = 0.0%%
@@ -87,8 +87,8 @@ title =
 url = https://oec.world/en/profile/bilateral-country/kor/partner/deu
 
 [www.reddit.com]
-match = -100.0%%
-title = Korean equivalent to Emergen-C and Tylenol? : r/koreatravel
+match = -40.0%%
+title = Korean equivalent to Emergen-C and Tylenol?
 url = https://www.reddit.com/r/koreatravel/comments/12jl64t/korean_equivalent_to_emergenc_and_tylenol/
 
 [momotherose.com]
