CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-15 08:06:02
+lastsearch = 2024-07-15 11:26:16
 
 [shopee.vn]
 match = 35.3%%
@@ -110,4 +110,9 @@ url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-
 match = 11.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[linhkienlammusic.com]
+match = 35.3%%
+title = Chiếu Điều Hoà Cao Su Non Tặng Kèm Gối Cho Bé
+url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 
