--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 09:16:24
+lastsearch = 2024-07-15 11:21:11
 
 [www.youtube.com]
 match = -48.0%%
@@ -12,9 +12,9 @@ title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
 url = https://www.youtube.com/watch?v=0--4nk6XRjE
 
 [www.voatiengviet.com]
-match = -68.0%%
-title = Đài Loan bắt giữ 8 người Việt Nam là lao động bỏ trốn
-url = https://www.voatiengviet.com/a/dai-loan-bat-giu-8-nguoi-viet-nam-la-lao-dong-bo-tron/7677699.html
+match = -92.0%%
+title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
+url = https://www.voatiengviet.com/a/7026996.html
 
 [daithuy.com]
 match = -92.0%%
@@ -44,7 +44,7 @@ url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-
 [books.google.com]
 match = -96.0%%
 title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=KcLrGZCT7a&sig=ACfU3U0bnVgu7cVs3nMC715SoGIw38SqIg&hl=en&sa=X&ved=2ahUKEwjn5d-G_aeHAxUghIkEHaPRDrMQ6AF6BAgWEAM
+url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=KcLrG_AO67&sig=ACfU3U0ylcJFsFm3VrMb5v_-faWG2tq3Xw&hl=en&sa=X&ved=2ahUKEwjTuIr5mKiHAxWWlu4BHbQdBigQ6AF6BAgTEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
