--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-15 05:51:20
+lastsearch = 2024-07-15 11:19:55
 
 [bilystore.vn]
 match = -95.2%%
@@ -12,14 +12,14 @@ title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -100.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [tiki.vn]
-match = -38.1%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = -14.3%%
+title = Mua Thảm trải giường lông cừu hàng loại 1
+url = https://tiki.vn/tham-trai-giuong-long-cuu-hang-loai-1-p85050283.html?spid=128675218
 
 [www.everonvn.vn]
 match = 9.5%%
@@ -122,9 +122,9 @@ title = giường gấp, giường xếp, giuong gap, giuong xep
 url = https://giuongxep.com/
 
 [www.lazada.vn]
-match = -23.8%%
-title = Thảm trải giường nỉ nhung hàng đẹp loại 1
-url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html
+match = -38.1%%
+title = [HCM]Drap ga giường chống thấm trơn loại 1 ...
+url = https://www.lazada.vn/products/hcmdrap-ga-giuong-chong-tham-tron-loai-1-ga-giuong-cho-be-i324462716.html
 
 [bvhungvuong.vn]
 match = -85.7%%
@@ -180,4 +180,9 @@ url = https://xuongnoithatxuatkhau.vn/san-pham/giuong-ngu-boc-dem-emmett-chan-ki
 match = -66.7%%
 title = Top 6 loại nệm tốt nhất cho giường khung năm 2024
 url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
+
+[noithatdogoviet.com]
+match = -104.8%%
+title = Giường Ngủ Đẹp Cao Cấp Giá Rẻ -20-60%% + Quà (7/2024)
+url = https://noithatdogoviet.com/giuong-ngu
 
