--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-15 04:16:19
+lastsearch = 2024-07-15 11:19:11
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Bộ ga chun chần
 url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 3.6%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [demxanh.com]
 match = -32.1%%
@@ -38,8 +38,8 @@ url = https://everonvn.com.vn/51/chan-bon-mua-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
 
 [songhong.info]
 match = -53.6%%
