--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-15 09:53:30
+lastsearch = 2024-07-15 11:18:49
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = Nem Nướng | Ho Chi Minh City
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -33.3%%
+title = Đặc Sản - Ăn Vặt Việt Nam tại Mỹ
+url = https://www.facebook.com/groups/956905268092222/
 
 [thegioinem.com]
 match = 23.5%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -27.8%%
+title = Que Huong Nem Nuong Air Fryer
+url = https://www.tiktok.com/discover/que-huong-nem-nuong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
