--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-15 04:29:16
+lastsearch = 2024-07-15 11:20:38
 
 [shopee.vn]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -25.0%%
-title = THẢM CHÙI CHÂN 3D SIÊU THẤM HÚT, ĐẸP MẮT, ...
-url = https://www.lazada.vn/products/tham-chui-chan-3d-sieu-tham-hut-dep-mat-chong-tron-truot-40x60-cm-005-i2049369315-s9566081756.html
+match = -75.0%%
+title = [ GIẢM 15K SHIP MỌI ĐƠN HÀNG ] Thảm lau chùi chân ...
+url = https://www.lazada.vn/products/giam-15k-ship-moi-don-hang-tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1604143324.html
 
 [megahomevietnam.com]
 match = 20.0%%
