--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-15 00:24:50
+lastsearch = 2024-07-15 11:20:19
 
 [www.tui.co.uk]
-match = -20.0%%
-title = Inflight Entertainment
-url = https://www.tui.co.uk/info/inflight-entertainment
+match = -40.0%%
+title = Flight and Travel Options
+url = https://www.tui.co.uk/destinations/info/travel-options
 
 [www.travelgossip.co.uk]
-match = -126.7%%
-title = TUI's new Birmingham-Singapore flight takes off
-url = https://www.travelgossip.co.uk/latestnews/tuis-birmingham-singapore-flight-takes-off/
+match = 0.0%%
+title = 
+url = https://www.travelgossip.co.uk/latestnews/marella-cruises-cancels-winter-2024-25-asia-and-middle-east-programme/
 
 [www.flightaware.com]
 match = -60.0%%
@@ -87,9 +87,9 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -240.0%%
-title = Marella Discovery 2 Itinerary, Current Position, Ship Review
-url = https://www.cruisemapper.com/ships/Marella-Discovery-2-651
+match = -220.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
 match = -73.3%%
@@ -210,4 +210,9 @@ url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-fir
 match = 0.0%%
 title = 
 url = https://www.singaporeair.com/en_UK/sg/travel-info/special-assistance/unaccompanied-minors/
+
+[www.travelweekly-asia.com]
+match = -100.0%%
+title = TUI Cruises Cruises & Sailing Schedules
+url = https://www.travelweekly-asia.com/Cruise/TUI-Cruises
 
