--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-15 10:52:33
+lastsearch = 2024-07-15 11:21:24
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -81.2%%
+title = #beautytok #blush #newproduct @Huda
+url = https://www.tiktok.com/@hudabeauty/video/7376703844530588970
 
 [archiveofourown.org]
 match = -137.5%%
@@ -67,9 +67,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.facebook.com]
-match = -231.2%%
-title = Tiếp tục những cung đường... #thixagiarai #giaraiquehuongtoi
-url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
+match = -243.8%%
+title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick Tím ...
+url = https://www.facebook.com/photo.php?fbid=122125314410079971&id=61552399139360&set=a.122098393922079971&locale=ms_MY
 
 [archive.org]
 match = -193.8%%
