CI images update

--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-15 09:15:40
+lastsearch = 2024-07-15 11:40:23
 
 [m.youtube.com]
 match = -144.4%%
@@ -42,9 +42,9 @@ title = [TPHCM] Bún Nem Nướng Siêu To Ăn Là No Lăn Ở Quận 10
 url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sieu-to-an-la-no-lan-o-quan-10/
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Nệm siêu nhẹ 180x200x05 - Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-180x200x05.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
@@ -130,4 +130,34 @@ url = https://forum.nameberry.com/t/nathaniel-nn-ned/239259
 match = -111.1%%
 title = Why isn't the 38 Super just called the 9mm magnum?
 url = https://www.quora.com/Why-isn-t-the-38-Super-just-called-the-9mm-magnum
+
+[www.sec.gov]
+match = -33.3%%
+title = 0001193125-04-205742.txt
+url = https://www.sec.gov/Archives/edgar/data/1131227/0001193125-04-205742.txt
+
+[www.vicemhatien.com.vn]
+match = -44.4%%
+title = C6ng ty C6 phAn Xi ming Hd Ti6n 1
+url = https://www.vicemhatien.com.vn/Upload/files/bctc2019_ctm.pdf
+
+[www.dongthapbmc.vn]
+match = -1700.0%%
+title = l
+url = https://www.dongthapbmc.vn/uploads/downloadIR.aspx?a=162830
+
+[teses.usp.br]
+match = -13.3%%
+title = oswaldo fidalgo
+url = https://teses.usp.br/teses/disponiveis/11/0/tde-20240301-143834/publico/725222.pdf
+
+[ro.scribd.com]
+match = -5.6%%
+title = 615 Forum Rao Vat1 | PDF
+url = https://ro.scribd.com/document/546802220/615-forum-rao-vat1
+
+[www.museum.ru]
+match = -50.0%%
+title = Gaustadt bamberg plzenske [vRVxE1]
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://distillyarium.ru/QPzbyT4fe43v
 
