--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-15 10:20:33
+lastsearch = 2024-07-15 11:40:52
 
 [vinatools.com]
 match = -206.7%%
@@ -172,9 +172,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [www.tiktok.com]
-match = -66.7%%
-title = D3 and K2 Supplements Height
-url = https://www.tiktok.com/discover/d3-and-k2-supplements-height
+match = -260.0%%
+title = Đi ăn ốc Singapore ở khu D2 Bình Thạnh với tui, rổ rá bình ...
+url = https://www.tiktok.com/@hi.vidayyy/video/7308207874562395393
 
 [www.lazada.vn]
 match = -146.7%%
