--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-15 11:25:22
+lastsearch = 2024-07-15 11:40:34
 
 [demxanh.com]
 match = 18.2%%
@@ -12,14 +12,14 @@ title = Thảm trải giường lông cừu TLC 02
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [demre.com.vn]
-match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+match = 25.0%%
+title = Thảm ghế thảm giường
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=alpha-desc
 
 [thegioidemonline.vn]
-match = -45.5%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -27,9 +27,9 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+match = -81.8%%
+title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
+url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
 match = -45.5%%
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -118.2%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
+match = -72.7%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
