--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-15 10:47:05
+lastsearch = 2024-07-15 11:50:20
 
 [www.thanhthuyhanh.com]
 match = 78.6%%
@@ -27,9 +27,9 @@ title = Ruột Gối Everon Các Loại, Giá Bán Rẻ Nhất Tại Hà Nội
 url = https://everonhanquoc.vn/1024/ruot-goi-everon
 
 [changagoidemsonghong.online]
-match = -142.9%%
-title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
-url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
+match = 42.9%%
+title = Ruột gối Sông Hồng
+url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
 
 [demxanh.com]
 match = -150.0%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -157.1%%
-title = Ruột gối - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/ruột gối
+match = -121.4%%
+title = ruột gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
