--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-15 06:17:47
+lastsearch = 2024-07-15 11:45:58
 
 [chieutrucsaigon.com]
-match = -23.8%%
-title = CÔNG TY BÁN CHIẾU TRÚC UY TÍN TẠI TP.HCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cong-ty-ban-chieu-truc-tai-tp-hcm-41.html
+match = 0.0%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -52.4%%
-title = Chiếu trúc giá rẻ có viền cao cấp loại tốt size 1m4
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-gia-re-co-vien-cao-cap-loai-tot-size-1m4/
+match = -76.2%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
