--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-15 05:44:21
+lastsearch = 2024-07-15 11:47:22
 
 [www.bible.com]
 match = -88.2%%
@@ -17,9 +17,9 @@ title = Thufingte 1-31 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -58.8%%
+title = Matthew 20:22-23 King James Version
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=KJV
 
 [mungchup.com]
 match = -100.0%%
