--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-15 11:41:12
+lastsearch = 2024-07-15 11:49:58
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -17,9 +17,9 @@ title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -32,14 +32,14 @@ title = Bảng Giá Đệm Lò Xo Everon King Koil Chính Hãng Giảm ...
 url = https://everon.online/blogs/news/bang-gia-dem-lo-xo-everon-king-koil-chinh-hang-giam-gia-tot-nhat
 
 [www.diepxuan.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 40.0%%
-title = Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-200x220x23.html
+match = 53.2%%
+title = Everon Quảng Bình Nệm lò xo Everon Kingkoil 180x200x27 CLOUD ...
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.html
 
 [everonvn.com.vn]
 match = 25.6%%
