CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 11:21:11
+lastsearch = 2024-07-15 12:20:57
 
 [www.youtube.com]
 match = -48.0%%
@@ -390,4 +390,9 @@ url = https://www.china-airlines.com/sea/vi/booking/book-flights/flight-search?l
 match = 12.0%%
 title = bóng đá 90 Đăng ký và nhận 188K
 url = http://tcns.ntt.edu.vn/Video/5571716
+
+[kevevn.vn]
+match = -80.0%%
+title = Vụ 292 du khách bị bỏ rơi ở Phú Quốc: Công ty Đài Loan ...
+url = https://kevevn.vn/20240218/vu-292-du-khach-bi-bo-roi-o-phu-quoc-cong-ty-dai-loan-tuyen-bo-pha-san-bi-to-lua-dao-28225754.html
 
