--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-14 21:46:35
+lastsearch = 2024-07-15 12:17:03
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -133.3%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -40.0%%
+title = Đèn nhà xưởng HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-nha-xuong-htlight
 
 [www.htlightlevel.vn]
-match = -60.0%%
-title = Đèn Pha LED 5054 - HT Max Light
-url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
+match = -206.7%%
+title = Đèn pha LED: giải pháp tối ưu cho chiếu sáng ngoài trời
+url = https://www.htlightlevel.vn/den-pha-led-chieu-sang-ngoai-troi/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
