CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-15 10:17:06
+lastsearch = 2024-07-15 12:30:20
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -182.4%%
-title = Can HOA restrict me from working on my car in my driveway?
-url = https://www.quora.com/Can-HOA-restrict-me-from-working-on-my-car-in-my-driveway
+match = -176.5%%
+title = Is it legal for a Florida HOA president to hire and pay ...
+url = https://www.quora.com/Is-it-legal-for-a-Florida-HOA-president-to-hire-and-pay-himself-as-a-Handyman-for-the-community-of-which-he-is-the-HOA-President
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -435,4 +435,9 @@ url = https://www.nomadicrealestate.com/hoa-rules-hierarchy/
 match = -170.6%%
 title = Neighborhood HOA asks man to take down Pride flag in ...
 url = https://www.wbtv.com/2023/09/27/hoa-asks-man-take-down-pride-flag-union-county/
+
+[www.fsresidential.com]
+match = -105.9%%
+title = The Key Florida HOA Board Member Requirements
+url = https://www.fsresidential.com/florida/news-events/articles/florida-board-member-requirements/
 
