--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-15 06:16:45
+lastsearch = 2024-07-15 12:30:08
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -18,8 +18,8 @@ url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
 match = -80.0%%
-title = HoLa - Nơi tình yêu bắt đầu | Hanoi
-url = https://www.facebook.com/holavnu/
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
