--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-15 11:24:16
+lastsearch = 2024-07-15 13:28:13
 
 [xoptraisan.info]
-match = -147.1%%
-title = Thảm nỉ ghép Tường Lâm cao cấp khổ 40x40cm siêu giảm giá
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-40x40
+match = -141.2%%
+title = Thảm nỉ ghép Tường Lâm 30x30 cao cấp chính hãng giá ...
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-30x30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -41.2%%
-title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
-url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
+match = -29.4%%
+title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -37,9 +37,9 @@ title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
 url = https://trieuchau.com/
 
 [www.facebook.com]
-match = 0.0%%
-title = THẢM XỐP TRẢI SÀN | Hanoi
-url = https://www.facebook.com/xoplotsan/
+match = -23.5%%
+title = Thảm Xốp Ghép Trải Sàn | Hanoi
+url = https://www.facebook.com/xoptraisan/
 
 [thamsami.com]
 match = -76.5%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -47.1%%
-title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
-url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
+match = -135.3%%
+title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
+url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
 
 [thamtraisan.info]
 match = -76.5%%
