--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-15 12:50:08
+lastsearch = 2024-07-15 13:24:57
 
 [demxanh.com]
 match = -42.9%%
@@ -212,7 +212,12 @@ title = Carvel Ice Cream Orange, CT 06477
 url = https://www.yelp.com/search?find_desc=Carvel+Ice+Cream&find_loc=Orange,+CT+06477
 
 [forums.arcade-museum.com]
-match = -50.0%%
-title = Galaga Cocktail - $475 obo -mine (Gainesville, GA)
-url = https://forums.arcade-museum.com/threads/galaga-cocktail-475-obo-mine-gainesville-ga.41445/
+match = -82.1%%
+title = Galaxian in connecticut BUT .. still have boards and harness.
+url = https://forums.arcade-museum.com/threads/galaxian-in-connecticut-but-still-have-boards-and-harness.346794/post-3082337
+
+[m.yelp.com]
+match = -25.0%%
+title = Best handmade shoes near Deep River Center, CT
+url = https://m.yelp.com/search?find_desc=handmade+shoes&find_loc=Deep+River+Center,+CT
 
