--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-15 10:40:57
+lastsearch = 2024-07-15 13:19:57
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -38.5%%
-title = Willamette Meteorite
-url = https://en.wikipedia.org/wiki/Willamette_Meteorite
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
 match = 0.0%%
@@ -162,9 +162,9 @@ title =
 url = https://traceup.com/mls-next-vs-ecnl-vs-ga-best-youth-soccer-league
 
 [www.ncbi.nlm.nih.gov]
-match = -261.5%%
-title = Design and Development of Ti–Ni, Ni–Mn–Ga and Cu–Al– ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6720360/
+match = -323.1%%
+title = Symptomatic oral squamous papilloma of the uvula - a rare ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7067511/
 
 [www.ice.gov]
 match = 0.0%%
