--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-15 12:48:53
+lastsearch = 2024-07-15 13:23:43
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -15.0%%
+title = Christina Mangurian, MD, MAS
+url = https://profiles.ucsf.edu/christina.mangurian
 
 [cityofclovis.com]
 match = -65.0%%
@@ -74,7 +74,7 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 [pubmed.ncbi.nlm.nih.gov]
 match = -180.0%%
 title = Polygenic risk modeling for prediction of epithelial ovarian ...
-url = https://pubmed.ncbi.nlm.nih.gov/35027648/
+url = https://pubmed.ncbi.nlm.nih.gov/35314806/
 
 [escholarship.org]
 match = -33.3%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -150.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
-url = https://cps-vo.org/group/cpspimtg24/registrants-attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
@@ -342,9 +342,9 @@ title = NTACT Evaluation Toolkit
 url = https://transitionta.org/wp-content/uploads/docs/toolkit_Evaluation.pdf
 
 [faculty.uci.edu]
-match = -140.0%%
-title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2994
+match = -115.0%%
+title = Nathan D. Wong - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2414
 
 [www.etecownersgroup.com]
 match = -115.0%%
