CI images update

--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-15 10:37:40
+lastsearch = 2024-07-15 13:41:21
 
 [www.cms.gov]
 match = 4.5%%
@@ -610,4 +610,9 @@ url = https://www.seakexperts.com/content/Expert_Witness_Directory_SEAK.pdf
 match = -36.4%%
 title = Tripyramids from the Kanc, 5/30/05 - vftt
 url = https://www.vftt.org/threads/tripyramids-from-the-kanc-5-30-05.6808/
+
+[en.wikipedia.org]
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Debarment
 
