--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-15 12:15:03
+lastsearch = 2024-07-15 13:43:30
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -222,9 +222,9 @@ title = 6656 Tim Tam Trail, Tallahassee, FL 32309 - Land.com
 url = https://www.land.com/property/6656-Tim-Tam-Trail-Tallahassee-Florida-32309/20851193/
 
 [www.lazada.vn]
-match = -345.5%%
-title = KS Thảm trải sàn nhà bếp phòng tắm nhà vệ sinh thiết kế ...
-url = https://www.lazada.vn/products/ks-tham-trai-san-nha-bep-phong-tam-nha-ve-sinh-thiet-ke-de-thuong-san-pham-co-nhieu-phien-ban-lua-chon-vui-long-chon-dung-san-pham-can-mua-intl-i1389553950.html
+match = -336.4%%
+title = Tấm trải nệm KS, đệm xốp, đệm ghế, văn phòng thoáng khí ...
+url = https://www.lazada.vn/products/tam-trai-nem-ks-dem-xop-dem-ghe-van-phong-thoang-khi-mua-he-ghe-ngoi-ghe-mat-dem-ghe-dem-ghe-an-xe-mua-he-i2356576147.html
 
 [mkpremier.vn]
 match = -200.0%%
@@ -262,9 +262,9 @@ title = combo nha trang 2n1đ: tắm bùn + khách sạn 4 sao + ăn ...
 url = https://www.i-resort.vn/combo-nha-trang-2n1d-tam-bun-khach-san-4-sao-an-sang-chi-510-000vnd-khach-30148-26-2-article.html
 
 [www.youtube.com]
-match = -345.5%%
-title = Vô tình thấy anh trai dắt Tiểu Tam vào khách sạn em gái ...
-url = https://www.youtube.com/watch?v=5upDVzh4LSA
+match = -290.9%%
+title = RAP TRAI NGIN BATSKHEM IA KABA NGI DON | Warbah ...
+url = https://www.youtube.com/watch?v=p0FX35TAxKk
 
 [wol.jw.org]
 match = -227.3%%
