--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-15 13:21:53
+lastsearch = 2024-07-15 13:41:10
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -162.5%%
-title = Khúc Vương Tình Remix~Từ Ngày Gặp Em Con Tim Ngân ...
-url = https://www.youtube.com/watch?v=vQzvT80z3cw
+match = -193.8%%
+title = Một cây Mai Chiếu Thủy đã được chơi 10 năm, vẫn giữ giá ...
+url = https://www.youtube.com/watch?v=nv0EjrLAqh0
 
 [hawater.com.vn]
 match = -75.0%%
@@ -47,9 +47,9 @@ title = Hành vi thường gặp ở trẻ 16 tháng tuổi
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/hanh-vi-thuong-gap-o-tre-16-thang-tuoi/
 
 [baomoi.com]
-match = -68.8%%
-title = Phim chiếu rạp gặp khó vì review 'bẩn'
-url = https://baomoi.com/phim-chieu-rap-gap-kho-vi-review-ban-c49621595.epi
+match = -106.2%%
+title = Chiếc két sắt bí ẩn trong căn nhà kẻ nghiện
+url = https://baomoi.com/chiec-ket-sat-bi-an-trong-can-nha-ke-nghien-c49635757.epi
 
 [tuyensinh247.com]
 match = -200.0%%
