--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-15 00:48:53
+lastsearch = 2024-07-15 13:46:27
 
 [thamaulac.com.vn]
-match = -38.9%%
-title = Thảm xốp ghép vân gỗ 60x60 cm màu sáng
-url = https://thamaulac.com.vn/san-pham/tham-xop-ghep-van-go-60x60-cm-mau-sang
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -11.1%%
-title = Thảm xốp tranh giao thông 60×60
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
-match = 16.7%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = -105.6%%
+title = Thảm Xốp Một Màu - Thảm Trải Sàn Vĩnh Thuận TPHCM
+url = https://thamvinhthuan.com/danh-muc/tham-xop/tham-xop-mot-mau/
 
 [trieuchau.com]
 match = -61.1%%
