--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-15 10:51:25
+lastsearch = 2024-07-15 13:39:37
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -199,7 +199,7 @@ url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-
 [cps-vo.org]
 match = -140.0%%
 title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/node/57775
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [www.va.gov]
 match = -21.4%%
